--- a/MAKEFILE
+++ b/MAKEFILE
@@ -6,7 +6,7 @@
 #    By: crtorres <crtorres@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/09/18 14:52:05 by crtorres          #+#    #+#              #
-#    Updated: 2022/09/18 16:44:15 by crtorres         ###   ########.fr        #
+#    Updated: 2022/09/18 17:01:07 by crtorres         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -39,6 +39,7 @@ SRC = ft_atoi.c\
 		ft_tolower.c\
 		ft_toupper.c\
 		ft_putchar_fd.c\
+		ft_putstr_fd.c\
 		
 
 OBJS = $(SRC: .O)
